--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ inflect==4.1.0
 marshmallow-sqlalchemy==0.23.0
 marshmallow_enum==1.5.1
 passlib==1.7.2
+phonenumbers==8.12.8
 psycopg2-binary==2.8.3
 pylint==2.4.4
 pytest==5.4.3
