--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,6 @@ pylint==2.4.4
 pytest==5.4.3
 python-dateutil==2.8.1
 requests==2.23.0
+SQLAlchemy-Searchable==1.2.0
 SQLAlchemy-Utils==0.36.6
 webargs==6.1.0
