--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ coloredlogs==14.0
 Flask==1.1.1
 flask_CORS==3.0.8
 flask-marshmallow==0.12.0
+Flask-Migrate==2.5.3
 Flask_RESTful==0.3.8
 Flask-Seeder==1.1.1
 Flask-SQLAlchemy==2.4.1
