add notifications for course creation

--- a/env/.env.course
+++ b/env/.env.course
@@ -5,3 +5,4 @@ DATABASE_URL=postgresql://course:password@course_db:5432/course
 SQL_HOST=course_db
 SQL_PORT=5432
 DATABASE=course
+KAFKA_URL=course_kafka:9092
