--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -30,6 +30,26 @@ services:
       retries: 20
     networks:
       - test-net
+  kafka:
+    container_name: kafka
+    image: wurstmeister/kafka:latest
+    restart: on-failure
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    env_file:
+      - env/test/.env.kafka
+    depends_on:
+      - zookeeper
+    networks:
+      - test-net
+  zookeeper:
+    container_name: zookeeper
+    image: wurstmeister/zookeeper:latest
+    restart: on-failure
+    env_file:
+      - env/test/.env.zookeeper
+    networks:
+      - test-net
 volumes:
   db_data:
 networks:
