--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,8 @@ services:
       retries: 5
     depends_on:
       - course_db
+      - course_kafka
+      - course_zookeeper
     networks:
       - app-net
   course_db:
@@ -43,10 +45,30 @@ services:
     env_file:
       - env/.env.course_db
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U course"]
+      test: [ "CMD-SHELL", "pg_isready -U course" ]
       interval: 10s
       timeout: 5s
       retries: 20
+    networks:
+      - app-net
+  course_kafka:
+    container_name: course_kafka
+    image: wurstmeister/kafka:latest
+    restart: on-failure
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    env_file:
+      - env/.env.course_kafka
+    depends_on:
+      - course_zookeeper
+    networks:
+      - app-net
+  course_zookeeper:
+    container_name: course_zookeeper
+    image: wurstmeister/zookeeper:latest
+    restart: on-failure
+    env_file:
+      - env/.env.course_zookeeper
     networks:
       - app-net
 volumes:
