--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
 iso4217==1.6.20180829
 inflect==4.1.0
+kafka-python==2.0.1
 marshmallow-sqlalchemy==0.23.0
 marshmallow_enum==1.5.1
 passlib==1.7.2
