--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pytest-mock==3.5.1
 python-dateutil==2.8.1
 redis==3.5.3
 requests==2.23.0
+SQLAlchemy==1.3.24
 SQLAlchemy-Searchable==1.2.0
 SQLAlchemy-Utils==0.36.6
 webargs==6.1.0
