--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       - ./tests:/home/app/tests
       - ./seeds:/home/app/seeds
       - ./src:/home/app/src
+      - ./logs:/home/app/logs
       - ./manage.py:/home/app/manage.py
       - ./setup.py:/home/app/setup.py
     ports:
